# qbittorrent-port-glue

./: .gitignore  flake.nix  pyproject.toml  service.nix
.github/: README.md  renovate.json
.github/workflows/: bump.yaml  check.yaml  release.yaml  update.yaml  vulnerable.yaml
src/qbittorrent_port_glue/: __init__.py  qbittorrent.py
